# LANEye

./: .gitignore  DEPLOY.md  Dockerfile  README.md  SECURITY.md  __init__.py  architecture.md  config.yaml  database.py  docker-compose.yml  exporters.py  github-pages.md  main.py  notifications.py  prometheus.yml  pyproject.toml  requirements.txt  scanner.py
.github/workflows/: ci.yml  pages.yml
docs/: api-docs.html  dashboard.html  index.html
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: Dashboard.tsx  HostList.tsx
laneye/: __init__.py  database.py  exporters.py  main.py  notifications.py  scanner.py
tests/: test_database.py  test_scanner.py
